--- a/index.html
+++ b/index.html
@@ -254,17 +254,17 @@ Nutze Deine Chance.
     &lt;div class=&quot;slides&quot;&gt;
         &lt;div class=&quot;slide&quot;&gt;
             &lt;a href=&quot;https://www.bolibro.com/am-beliebtesten&quot; target=&quot;_blank&quot;&gt; &lt;!-- Link zum ersten Bild --&gt;
-                &lt;img src=&quot;https://i.imgur.com/OhY5hBy.jpg&quot; alt=&quot;Bild 1&quot;&gt;
+                &lt;img src=&quot;images/1.jpg&quot; alt=&quot;Bild 1&quot;&gt;
             &lt;/a&gt;
         &lt;/div&gt;
         &lt;div class=&quot;slide&quot;&gt;
             &lt;a href=&quot;https://www.bolibro.com/angebote&quot; target=&quot;_blank&quot;&gt; &lt;!-- Link zum zweiten Bild --&gt;
-                &lt;img src=&quot;https://i.imgur.com/xca3TGg.jpg&quot; alt=&quot;Bild 2&quot;&gt;
+                &lt;img src=&quot;images/2.jpg&quot; alt=&quot;Bild 2&quot;&gt;
             &lt;/a&gt;
         &lt;/div&gt;
         &lt;div class=&quot;slide&quot;&gt;
             &lt;a href=&quot;https://www.bolibro.com/bibliothek&quot; target=&quot;_blank&quot;&gt; &lt;!-- Link zum dritten Bild --&gt;
-                &lt;img src=&quot;https://i.imgur.com/bRFkewI.jpg&quot; alt=&quot;Bild 3&quot;&gt;
+                &lt;img src=&quot;images/3.jpg&quot; alt=&quot;Bild 3&quot;&gt;
             &lt;/a&gt;
         &lt;/div&gt;
     &lt;/div&gt;
