--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
             padding: 0;
             font-family: 'Helvetica Neue', Arial, sans-serif;
             background-color: #ffffff;
+            overflow-x: hidden; /* Verhindert horizontales Scrollen */
         }
 
         /* Styles für das obere Karussell */
         .slider {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100vw;
+            width: 100%;
             height: 100vh;
             max-width: 100%;
             max-height: 100%;
             overflow: hidden;
-            margin: 0;
+            margin-bottom: 20px;
         }
         .slides {
             display: flex;
@@ -99,20 +96,6 @@
         }
         .slider:hover .arrow {
             opacity: 1;
-        }
-
-        /* Media Queries für das obere Karussell */
-        @media (min-width: 769px) {
-            .slider {
-                width: 100vw;
-                height: 100vh;
-            }
-        }
-        @media (max-width: 768px) {
-            .slider {
-                width: 100vw;
-                height: 100vh;
-            }
         }
 
         /* Styles für die 4 statischen Bilder */
