--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
             padding: 0;
             font-family: 'Helvetica Neue', Arial, sans-serif;
             background-color: #ffffff;
+            font-size: 20px;
             overflow-x: hidden;
+            text-align: center;
         }
         .navbar {
             display: flex;
@@ -30,7 +32,7 @@
             color: white;
             text-decoration: none;
             margin: 0 15px;
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
         }
         .navbar a:hover {
@@ -56,7 +58,6 @@
             min-width: 300px; /* Fallback für kleinere Bildschirme */
         }
         .fixed-size {
-            position: relative;
             width: 100%;
             max-width: 100%;
             margin: 0 auto;
@@ -64,6 +65,36 @@
         }
         .carousel-container, .static-image-container {
             margin-bottom: 50px;
+        }
+        .carousel-container img,
+        .static-image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 15px;
+        }
+        .info-button {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px 20px;
+            border-radius: 25px;
+            border: none;
+            font-size: 20px;
+            cursor: pointer;
+            background-color: #2d2d30;
+            color: white;
+            opacity: 0;
+            transition: opacity 0.5s ease, transform 0.5s ease, background-color 0.5s ease;
+            font-family: inherit;
+            text-decoration: none;
+        }
+        .hover-shadow:hover .info-button {
+            opacity: 1;
+            transform: translateX(-50%) translateY(0);
+        }
+        .info-button:hover {
+            background-color: #0071e3;
         }
     </style>
 </head>
