--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section class="slider-section">
         <div class="slider">
             <div class="slides">
-                <div class="slide"><img src="bild1.jpg" alt="Bild 1"></div>
-                <div class="slide"><img src="bild2.jpg" alt="Bild 2"></div>
-                <div class="slide"><img src="bild3.jpg" alt="Bild 3"></div>
+                <div class="slide"><img src="1.jpg" alt="Bild 1"></div>
+                <div class="slide"><img src="2.jpg" alt="Bild 2"></div>
+                <div class="slide"><img src="3.jpg" alt="Bild 3"></div>
             </div>
         </div>
     </section>
